--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,21 +12,27 @@
     "from langchain_community.vectorstores import Chroma\n",
     "from itertools import combinations\n",
     "import numpy as np\n",
-    "from langchain.memory import ConversationSummaryBufferMemory,ConversationBufferMemory"
+    "from langchain.memory import ConversationSummaryBufferMemory,ConversationBufferMemory, ConversationBufferWindowMemory\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import create_retrieval_chain, RetrievalQA, ConversationalRetrievalChain, RetrievalQAWithSourcesChain\n",
+    "import google.generativeai as genai\n",
+    "\n",
+    "from langchain_community.llms import HuggingFaceHub\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_VECTOR_STORE_DIR = Path('./data')"
+    "LOCAL_VECTOR_STORE_DIR = Path('./data')\n",
+    "GOOGLE_API_KEY = \"AIzaSyDzH-2ryBkzhrWtKJ6NmBRLREpmLsf8FqE\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 67/67 [00:00<00:00, 1201.92it/s]\n"
+      "100%|██████████| 67/67 [00:00<00:00, 1642.63it/s]\n"
      ]
     }
    ],
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,16 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00,  1.33it/s]\n",
-      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 54.39it/s]\n",
-      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 45.88it/s]"
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 13.98it/s]\n",
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 37.26it/s]\n",
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 54.83it/s]"
      ]
     },
     {
@@ -179,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 19.52it/s]"
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 41.51it/s]"
      ]
     },
     {
@@ -327,15 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 14.59it/s]\n",
-      "OllamaEmbeddings: 100%|██████████| 4/4 [00:00<00:00, 24.95it/s]"
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 48.23it/s]\n",
+      "OllamaEmbeddings: 100%|██████████| 4/4 [00:00<00:00, 26.23it/s]"
      ]
     },
     {
@@ -378,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 16.48it/s]"
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 50.63it/s]"
      ]
     },
     {
@@ -489,38 +495,247 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Instantiating LLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def instantiate_LLM(api_key,temperature=0.7,top_p=0.95,model_name=None):\n",
+    "    \"\"\"Instantiate LLM in Langchain.\n",
+    "    Parameters:\n",
+    "        LLM_provider (str): the LLM provider; in [\"OpenAI\",\"Google\",\"HuggingFace\"]\n",
+    "        model_name (str): in [\"gpt-3.5-turbo\", \"gpt-3.5-turbo-0125\", \"gpt-4-turbo-preview\", \n",
+    "            \"gemini-pro\", \"mistralai/Mistral-7B-Instruct-v0.2\"].            \n",
+    "        api_key (str): google_api_key or openai_api_key or huggingfacehub_api_token \n",
+    "        temperature (float): Range: 0.0 - 1.0; default = 0.5\n",
+    "        top_p (float): : Range: 0.0 - 1.0; default = 1.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "  \n",
+    "    llm = HuggingFaceHub(\n",
+    "        repo_id=\"mistralai/Mistral-7B-Instruct-v0.2\", \n",
+    "        # repo_id=model_name,\n",
+    "        huggingfacehub_api_token=api_key,\n",
+    "        model_kwargs={\n",
+    "            \"temperature\":temperature,\n",
+    "            \"top_p\": top_p,\n",
+    "            \"do_sample\": True,\n",
+    "            \"max_new_tokens\":1024\n",
+    "        },\n",
+    "    )\n",
+    "    return llm\n",
+    "\n",
+    "llm = instantiate_LLM(api_key=\"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\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Memory Initialization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_memory(model_name='gpt-3.5-turbo',memory_max_token=None):\n",
-    "    \"\"\"Creates a ConversationSummaryBufferMemory for gpt-3.5-turbo\n",
-    "    Creates a ConversationBufferMemory for the other models.\"\"\"\n",
+    "def create_memory():\n",
+    "    \"\"\"Creates a ConversationSummaryBufferMemory for our model\n",
+    "    Creates a ConversationBufferWindowMemory for our models.\"\"\"\n",
     "    \n",
-    "    if model_name==\"gpt-3.5-turbo\":\n",
-    "        if memory_max_token is None:\n",
-    "            memory_max_token = 1024 # max_tokens for 'gpt-3.5-turbo' = 4096\n",
-    "        memory = ConversationSummaryBufferMemory(\n",
-    "            max_token_limit=memory_max_token,\n",
-    "            llm=ChatOpenAI(model_name=\"gpt-3.5-turbo\",openai_api_key=openai_api_key,temperature=0.1),\n",
-    "            return_messages=True,\n",
-    "            memory_key='chat_history',\n",
-    "            output_key=\"answer\",\n",
-    "            input_key=\"question\"\n",
-    "        )\n",
-    "    else:\n",
-    "        memory = ConversationBufferMemory(\n",
-    "            return_messages=True,\n",
-    "            memory_key='chat_history',\n",
-    "            output_key=\"answer\",\n",
-    "            input_key=\"question\",\n",
-    "        )  \n",
-    "    return memory"
+    "    memory = ConversationBufferWindowMemory(\n",
+    "        memory_key=\"history\",\n",
+    "        input_key=\"question\",\n",
+    "        return_messages=True,\n",
+    "        k=3\n",
+    "    )\n",
+    "\n",
+    "    return memory\n",
+    "\n",
+    "memory = create_memory()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating the Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory.save_context(\n",
+    "    {\"question\": \"What can you do?\"},\n",
+    "    {\"output\": \"I can answer queries based on the past reviews and course outlines of various courses offered at LUMS.\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prompt Template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context_qa = \"\"\"\n",
+    "You are a professional chatbot assistant for helping students at LUMS regarding course selection.\n",
+    "\n",
+    "Please follow the following rules:\n",
+    "\n",
+    "1. Answer the question in your own words from the context given to you.\n",
+    "2. If questions are asked where there is no relevant context available, please answer from what you know.\n",
+    "3. If you don't know the answer, don't try to make up an answer.\n",
+    "\n",
+    "Context: {context}\n",
+    "\n",
+    "You are having a converation with a student at LUMS.\n",
+    "\n",
+    "Chat History: {history}\n",
+    "\n",
+    "Human: {question}\n",
+    "\n",
+    "Assistant:\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables=[\"history\", \"context\", \"question\"],\n",
+    "    template=context_qa\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Putting it all together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genai.configure(api_key=GOOGLE_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/gemini-1.0-pro\n",
+      "models/gemini-1.0-pro-001\n",
+      "models/gemini-1.0-pro-latest\n",
+      "models/gemini-1.0-pro-vision-latest\n",
+      "models/gemini-1.5-pro-latest\n",
+      "models/gemini-pro\n",
+      "models/gemini-pro-vision\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in genai.list_models():\n",
+    "  if 'generateContent' in m.supported_generation_methods:\n",
+    "    print(m.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qa = RetrievalQA.from_chain_type(\n",
+    "    llm=llm,\n",
+    "    retriever=retriever,\n",
+    "    verbose=False,\n",
+    "    return_source_documents=False,\n",
+    "    chain_type_kwargs={\n",
+    "        \"prompt\": prompt,\n",
+    "        \"memory\": memory\n",
+    "    },\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  .  .  .   \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 16.72it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  .  .  .   \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OllamaEmbeddings: 100%|██████████| 1/1 [00:00<00:00, 16.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exiting ChatBot. Goodbye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    user_input = input(\"Enter your question here (or type 'exit' to quit): \")\n",
+    "    if user_input.lower() == 'exit':\n",
+    "        print(\"Exiting ChatBot. Goodbye!\")\n",
+    "        break\n",
+    "    print(\"  .  .  .   \")\n",
+    "    #result = agent(user_input)\n",
+    "\n",
+    "    result = qa({'query': user_input})\n",
+    "\n",
+    "    print(\"result:\", result)\n",
+    "\n",
+    "    answer = result['result']\n",
+    "    answer\n",
+    "\n",
+    "    # print(f\"ChatBot: {answer}\")"
    ]
   }
  ],
