--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 67/67 [00:00<00:00, 1777.53it/s]\n"
+      "100%|██████████| 67/67 [00:00<00:00, 1605.22it/s]\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector_store_Ollama: 67 chunks.\n"
+      "vector_store_Ollama: 134 chunks.\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +251,20 @@
       "----------------------------------------------------------------------------------------------------\n",
       "Document 2:\n",
       "\n",
+      "Year of study: Junior\n",
+      "\n",
+      "Review for 200 level course:\n",
+      "\n",
+      "CS 202\n",
+      "Data Structures with Sir Ihsan was a challenging yet fun course. I learned a lot and the course challenges your ability to think and rationalize. Learning wise, this course is great. The outline is well defined and you already know the quiz schedule before the semester so that helps you set your schedule before hand. There is no midterm either which helps during the midweek by lessening the burden. The assignments are comparatively easier but still challenging enough. \n",
+      "\n",
+      "Gpa: 3.60-4.00\n",
+      "\n",
+      "score:375.421\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Document 3:\n",
+      "\n",
       "Year of study: Senior\n",
       "\n",
       "Review for 100 level course:\n",
@@ -263,30 +277,18 @@
       "score:401.399\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "Document 3:\n",
-      "\n",
-      "Year of study: Junior\n",
-      "\n",
-      "Review for 100 level course:\n",
-      "\n",
-      "Cs-100, can look very intimidating if you don't have an interest in computer science but if you just try to be a little curious and practice the assignments, then it's actually pretty easy. I got an F first time I took this course, but after putting in a little effort, I got an A-.\n",
-      "\n",
-      "Gpa: 2.50-3.00\n",
-      "\n",
-      "score:406.734\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
       "Document 4:\n",
       "\n",
-      "Year of study: Junior\n",
+      "Year of study: Senior\n",
       "\n",
       "Review for 100 level course:\n",
       "\n",
-      "CS 100. Really good course. Provided the basics of programming and built a steady development in creating algorithms. Introduced basics concepts and required students to present thorough understanding of what is required in coding design and algorithms\n",
+      "CS100 - Computational Problem Solving\n",
+      "This is a very slow and repetitive course. It takes too long to get to the meat of the content and there is a huge lag in between the labs and the lecture content. The labs and assignments were laughably easy which meant the grading ended up being terrible, with ridiculously high means. Would only recommend if someone plans to pursue a CS minor.\n",
       "\n",
-      "Gpa: 3.30-3.60\n",
+      "Gpa: 3.60-4.00\n",
       "\n",
-      "score:419.392\n",
+      "score:401.399\n",
       "\n"
      ]
     }
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -311,9 +313,9 @@
      "output_type": "stream",
      "text": [
       "Similarty of document_0 to the query: 190.1073\n",
-      "Similarty of document_1 to the query: 212.1687\n",
-      "Similarty of document_2 to the query: 208.5819\n",
-      "Similarty of document_3 to the query: 204.6471\n"
+      "Similarty of document_1 to the query: 190.1073\n",
+      "Similarty of document_2 to the query: 212.1687\n",
+      "Similarty of document_3 to the query: 212.1687\n"
      ]
     }
    ],
@@ -339,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -388,35 +390,32 @@
       "\n",
       "Year of study: Junior\n",
       "\n",
+      "Review for 200 level course:\n",
+      "\n",
+      "CS 202\n",
+      "Data Structures with Sir Ihsan was a challenging yet fun course. I learned a lot and the course challenges your ability to think and rationalize. Learning wise, this course is great. The outline is well defined and you already know the quiz schedule before the semester so that helps you set your schedule before hand. There is no midterm either which helps during the midweek by lessening the burden. The assignments are comparatively easier but still challenging enough. \n",
+      "\n",
+      "Gpa: 3.60-4.00\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Document 3:\n",
+      "\n",
+      "Year of study: Junior\n",
+      "\n",
       "Review for 400 level course:\n",
       "\n",
       "CA 437 - Deep Learrning. Intellectually challenging and stimulating. Dl introduces the many used practical applications of different algorithms. The course, up until now, has thoroughly tested our understanding of different concepts and its application in coding. Very good and practical course\n",
       "\n",
       "Gpa: 3.30-3.60\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "Document 3:\n",
-      "\n",
-      "Year of study: Senior\n",
-      "\n",
-      "Review for 300 level course:\n",
-      "\n",
-      "Feedback Control Systems\n",
-      "This course introduced us to the idea of feedback signals and looped mechanisms. With widespread usage within the industry, the course focused on instikkimg state of the art mechanisms for dynamic control of various machines such as robots, electrical equipments etc.\n",
-      "I had an A in this course \n",
-      "The course difficulty was 3\n",
-      "\n",
-      "Gpa: 3.60-4.00\n",
-      "----------------------------------------------------------------------------------------------------\n",
       "Document 4:\n",
       "\n",
       "Year of study: Junior\n",
       "\n",
-      "Review for 100 level course:\n",
+      "Review for 400 level course:\n",
       "\n",
-      "Econ 100\n",
-      "Econ 100 is one of the most fun, intuitive course I took. It gives insights into the world if economics without overwhelming the students. The course delved into some basic Economic models, their applications. The graded instruments were nicely segmented with a well defined outline. The instructor, though some times can feel very standoffish, is no doubt a great instructor if not great human.\n",
+      "CA 437 - Deep Learrning. Intellectually challenging and stimulating. Dl introduces the many used practical applications of different algorithms. The course, up until now, has thoroughly tested our understanding of different concepts and its application in coding. Very good and practical course\n",
       "\n",
-      "Gpa: 3.60-4.00\n"
+      "Gpa: 3.30-3.60\n"
      ]
     }
    ],
@@ -441,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,9 +539,9 @@
     "Please follow the following rules:\n",
     "\n",
     "1. Answer the question in your own words from the context given to you.\n",
-    "2. If questions are asked where there is no relevant context available, please answer from what you know.\n",
-    "3. If you don't know the answer, don't try to make up an answer.\n",
-    "4. If a relevant review is not present in the context given to you, just say \"I don't have any information about this course.\"\n",
+    "2. If you don't know the answer, don't try to make up an answer.\n",
+    "3. If you don't have a course's review or outline, just say that you do not know about this course.\n",
+    "4. If a user enters a course code (e.g. ECON100 or CS370), match it with reviews with that course code. If the user enters a course name (e.g. Introduction to Economics or Database Systems), match it with reviews with that course name.\n",
     "\n",
     "Context: {context}\n",
     "\n",
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -630,10 +629,26 @@
      "output_type": "stream",
      "text": [
       "  .  .  .   \n",
-      "Me: Should I take REL 523 as a course to increase my CGPA?\n",
+      "Me: Should i take the course with code REL500\n",
       "Chatbot: \n",
-      "Based on the provided context, there isn't a review for REL 523 available. However, if you're considering a Physics major or are interested in General Relativity, the 400 level course, Relativistic Electrodynamics (PHY 404), might be beneficial. It's challenging and has a significant workload, but the knowledge gained could potentially contribute to a higher CGPA. Keep in mind that the course is not recommended for students outside of the Physics major.\n",
-      "Exiting ChatBot. Goodbye!\n"
+      "I'm sorry for any confusion, but I don't have a review or outline for the course with code REL500. Could you please provide more details about the course, such as its name or a brief description, so I can try to help you with any related queries?\n",
+      "  .  .  .   \n",
+      "Me: should i take REL523\n",
+      "Chatbot: \n",
+      "I'm unable to provide information about the course REL523 as I don't have any reviews or outlines related to it in my database. Could you please check the course name or code with your academic advisor or the department offering the course for more accurate and detailed information?\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/93/p8_82pyd6nxg7_p_xtp6xv100000gn/T/ipykernel_57259/2978624241.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0muser_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter your question here (or type 'exit' to quit): \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0muser_input\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'exit'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Exiting ChatBot. Goodbye!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Applications/anaconda3/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Applications/anaconda3/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
