more gradio stuff

--- a/deploy_attempt.ipynb
+++ b/deploy_attempt.ipynb
@@ -16,8 +16,8 @@
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains import create_retrieval_chain, RetrievalQA, ConversationalRetrievalChain, RetrievalQAWithSourcesChain\n",
     "import google.generativeai as genai\n",
-    "\n",
-    "from langchain_community.llms import HuggingFaceHub\n"
+    "from langchain_community.llms import HuggingFaceHub\n",
+    "import gradio as gr"
    ]
   },
   {
@@ -677,7 +677,7 @@
     }
    ],
    "source": [
-    "import gradio as gr\n",
+    "\n",
     "\n",
     "def rag_model(query):\n",
     "    # Your RAG model code here\n",
